...
        "https://www.googleapis.com/auth/userinfo.email",
        "https://www.googleapis.com/auth/userinfo.profile",
    )
    
    const val DEFAULT_CATEGORY = "Daily Living"
    const val DEFAULT_SUBCATEGORY = "Groceries"
    const val DEFAULT_INCOME_CATEGORY = "Income"
    const val DEFAULT_INCOME_SUBCATEGORY = "Salary"
    const val CATEGORY_ACCOUNT_TRANSFER = "Account Transfer"
    const val SUBCATEGORY_ACCOUNT_TRANSFER = "Account Transfer"
    const val DEFAULT_PAYMENT_METHOD = "Cash"
    const val DEFAULT_ACCOUNT = "Passbook"
    
    const val PREFS_NAME = "app_prefs"
    const val KEY_EXPENSE_CATEGORIES_MAP = "expense_categories_map"
    const val KEY_INCOME_CATEGORIES_MAP = "income_categories_map"
    const val KEY_ACCOUNTS_LIST = "accounts_list"
...
